fixing IZ#160429:low performance of editing project configurations