@@ -38,7 +38,6 @@
  * Version 2 license, then the option applies only if the new code is
  * made subject to such option by the copyright holder.
  */
-
 package org.netbeans.modules.cnd.makeproject.api.configurations;
 
 import java.beans.PropertyEditor;
@@ -52,8 +51,6 @@ import org.netbeans.modules.cnd.makeproject.configurations.ui.BooleanNodeProp;
 import org.netbeans.modules.cnd.api.utils.IpeUtils;
 import org.netbeans.modules.cnd.api.xml.XMLDecoder;
 import org.netbeans.modules.cnd.api.xml.XMLEncoder;
-import org.netbeans.modules.cnd.api.compilers.CompilerSetManager;
-import org.netbeans.modules.cnd.api.compilers.CompilerSet;
 import org.netbeans.modules.cnd.api.compilers.Tool;
 import org.openide.nodes.Node;
 import org.openide.nodes.PropertySupport;
@@ -61,180 +58,247 @@ import org.openide.nodes.Sheet;
 import org.openide.util.NbBundle;
 
 public class ItemConfiguration implements ConfigurationAuxObject {
+
     private boolean needSave = false;
-    
     private Configuration configuration;
     private Item item;
-    
     // General
     private BooleanConfiguration excluded;
-    private int tool = -1;
-    
+    private byte tool = -1;
     // Tools
-    private CustomToolConfiguration customToolConfiguration;
-    private CCompilerConfiguration cCompilerConfiguration;
-    private CCCompilerConfiguration ccCompilerConfiguration;
-    private FortranCompilerConfiguration fortranCompilerConfiguration;
+    private ConfigurationBase lastConfiguration;
 
     // cached id of item
 //    private String id;
-    
     public ItemConfiguration(Configuration configuration, Item item) {
         // General
         this.configuration = configuration;
         setItem(item);
         excluded = new BooleanConfiguration(null, false);
-        // Compilers
-        //customToolConfiguration = new CustomToolConfiguration();
-        //cCompilerConfiguration = new CCompilerConfiguration(((MakeConfiguration)configuration).getBaseDir(), item.getFolder().getFolderConfiguration(configuration).getCCompilerConfiguration());
-        //ccCompilerConfiguration = new CCCompilerConfiguration(((MakeConfiguration)configuration).getBaseDir(), item.getFolder().getFolderConfiguration(configuration).getCCCompilerConfiguration());
-        //fortranCompilerConfiguration = new FortranCompilerConfiguration(((MakeConfiguration)configuration).getBaseDir(), ((MakeConfiguration)configuration).getFortranCompilerConfiguration());
-        
+
         // This is side effect of lazy configuration. We should init folder configuration
         // TODO: remove folder initialization. Folder should be responsible for it
         item.getFolder().getFolderConfiguration(configuration);
 
         clearChanged();
     }
-    
-    public boolean isCompilerToolConfiguration() {
-        return getTool() == Tool.CCompiler ||
-                getTool() == Tool.CCCompiler ||
-                getTool() == Tool.FortranCompiler;
+
+    public ItemConfiguration(ItemConfiguration itemConfiguration) {
+        this.configuration = itemConfiguration.configuration;
+        this.item = itemConfiguration.item;
+        this.excluded = itemConfiguration.excluded;
+        this.needSave = itemConfiguration.needSave;
+        this.tool = itemConfiguration.tool;
+        this.lastConfiguration = itemConfiguration.lastConfiguration;
     }
-    
+
+    public boolean isDefaultConfiguration() {
+        if (excluded.getValue()) {
+            return false;
+        }
+        if (getTool() != item.getDefaultTool()) {
+            return false;
+        }
+        if (lastConfiguration != null && lastConfiguration.getModified()) {
+            return false;
+        }
+        return true;
+    }
+
+    public boolean isCompilerToolConfiguration() {
+        switch (getTool()) {
+            case Tool.Assembler:
+            case Tool.CCCompiler:
+            case Tool.CCompiler:
+            case Tool.FortranCompiler:
+                return true;
+        }
+        return false;
+    }
+
     public BasicCompilerConfiguration getCompilerConfiguration() {
-        if (getTool() == Tool.CCompiler) {
-            return getCCompilerConfiguration();
-        } else if (getTool() == Tool.CCCompiler) {
-            return getCCCompilerConfiguration();
-        } else if (getTool() == Tool.FortranCompiler) {
-            return getFortranCompilerConfiguration();
-        } else {
-            assert false;
+        switch (getTool()) {
+            case Tool.Assembler:
+                return getAssemblerConfiguration();
+            case Tool.CCCompiler:
+                return getCCCompilerConfiguration();
+            case Tool.CCompiler:
+                return getCCompilerConfiguration();
+            case Tool.FortranCompiler:
+                return getFortranCompilerConfiguration();
         }
         return null;
     }
-    
+
     public Configuration getConfiguration() {
         return configuration;
     }
-    
+
     public void setConfiguration(Configuration configuration) {
         this.configuration = configuration;
     }
-    
+
     public Item getItem() {
         return item;
     }
-    
+
     private void setItem(Item item) {
         if (this.item != item) {
             this.item = item;
             this.needSave = true;
 //            this.id = null;
-            //this.tool = item.getDefaultTool();
+        //this.tool = item.getDefaultTool();
         }
     }
-    
+
     // General
     public BooleanConfiguration getExcluded() {
         return excluded;
     }
-    
+
     public void setExcluded(BooleanConfiguration excluded) {
         this.excluded = excluded;
         needSave = true;
     }
-    
+
     // Tool
-    public void setTool(String genericName) {
-        if (genericName != null) {
-            CompilerSet set = CompilerSetManager.getDefault().getCompilerSet(((MakeConfiguration)configuration).getCompilerSet().getValue());
-            tool = set.getToolKind(genericName);
-        }
+    public void setTool(String name) {
+//        if (genericName != null) {
+//            CompilerSet set = CompilerSetManager.getDefault(((MakeConfiguration)configuration).getDevelopmentHost().getName()).getCompilerSet(((MakeConfiguration)configuration).getCompilerSet().getValue());
+//            tool = set.getToolKind(genericName);
+//        }
+        setTool(Tool.getTool(name));
     }
+
     public void setTool(int tool) {
-        this.tool = tool;
-    }
+        if (this.tool != tool){
+            lastConfiguration = null;
+        }
+        this.tool = (byte)tool;
+   }
+
     public int getTool() {
         if (tool == -1) {
-            tool = item.getDefaultTool();
+            tool = (byte)item.getDefaultTool();
         }
         return tool;
     }
-    protected String getToolName() {
-        CompilerSet set = CompilerSetManager.getDefault().getCompilerSet(((MakeConfiguration)configuration).getCompilerSet().getValue());
-        return set.getTool(getTool()).getName();
-    }
+//    protected String getToolName() {
+//        CompilerSet set = CompilerSetManager.getDefault(((MakeConfiguration)configuration).getDevelopmentHost().getName()).getCompilerSet(((MakeConfiguration)configuration).getCompilerSet().getValue());
+//        return set.getTool(getTool()).getName();
+//    }
+
     protected String[] getToolNames() {
-        CompilerSet set = CompilerSetManager.getDefault().getCompilerSet(((MakeConfiguration)configuration).getCompilerSet().getValue());
-        return set.getToolGenericNames();
+//        CompilerSet set = CompilerSetManager.getDefault(((MakeConfiguration)configuration).getDevelopmentHost().getName()).getCompilerSet(((MakeConfiguration)configuration).getCompilerSet().getValue());
+//        return set.getToolGenericNames();
+        return Tool.getCompilerToolNames();
     }
-    
+
     // Custom Tool
     public void setCustomToolConfiguration(CustomToolConfiguration customToolConfiguration) {
-        this.customToolConfiguration = customToolConfiguration;
+        this.lastConfiguration = customToolConfiguration;
     }
-    
+
     public synchronized CustomToolConfiguration getCustomToolConfiguration() {
-        if (customToolConfiguration == null) {
-            customToolConfiguration = new CustomToolConfiguration();
+        if (getTool() == Tool.CustomTool) {
+            if (lastConfiguration == null) {
+                lastConfiguration = new CustomToolConfiguration();
+            }
+            assert lastConfiguration instanceof CustomToolConfiguration;
+            return  (CustomToolConfiguration) lastConfiguration;
         }
-        return customToolConfiguration;
+        return null;
     }
-    
+
     // C Compiler
     public void setCCompilerConfiguration(CCompilerConfiguration cCompilerConfiguration) {
-        this.cCompilerConfiguration = cCompilerConfiguration;
+        this.lastConfiguration = cCompilerConfiguration;
     }
-    
+
     public synchronized CCompilerConfiguration getCCompilerConfiguration() {
-        if (cCompilerConfiguration == null) {
-            cCompilerConfiguration = new CCompilerConfiguration(((MakeConfiguration)configuration).getBaseDir(), item.getFolder().getFolderConfiguration(configuration).getCCompilerConfiguration());
+        if (getTool() == Tool.CCompiler) {
+            if (lastConfiguration == null) {
+                FolderConfiguration folderConfiguration = item.getFolder().getFolderConfiguration(configuration);
+                if (folderConfiguration != null) {
+                    lastConfiguration = new CCompilerConfiguration(((MakeConfiguration) configuration).getBaseDir(), folderConfiguration.getCCompilerConfiguration());
+                } else {
+                    lastConfiguration = new CCompilerConfiguration(((MakeConfiguration) configuration).getBaseDir(), null);
+                }
+            }
+            assert lastConfiguration instanceof CCompilerConfiguration;
+            return  (CCompilerConfiguration) lastConfiguration;
         }
-        return cCompilerConfiguration;
+        return null;
     }
-    
+
     // CC Compiler
     public void setCCCompilerConfiguration(CCCompilerConfiguration ccCompilerConfiguration) {
-        this.ccCompilerConfiguration = ccCompilerConfiguration;
+        this.lastConfiguration = ccCompilerConfiguration;
     }
-    
+
     public synchronized CCCompilerConfiguration getCCCompilerConfiguration() {
-        if (ccCompilerConfiguration == null) {
-            ccCompilerConfiguration = new CCCompilerConfiguration(((MakeConfiguration)configuration).getBaseDir(), item.getFolder().getFolderConfiguration(configuration).getCCCompilerConfiguration());
+        if (getTool() == Tool.CCCompiler) {
+            if (lastConfiguration == null) {
+                FolderConfiguration folderConfiguration = item.getFolder().getFolderConfiguration(configuration);
+                if (folderConfiguration != null) {
+                    lastConfiguration = new CCCompilerConfiguration(((MakeConfiguration) configuration).getBaseDir(), folderConfiguration.getCCCompilerConfiguration());
+                } else {
+                    lastConfiguration = new CCCompilerConfiguration(((MakeConfiguration) configuration).getBaseDir(), null);
+                }
+            }
+            assert lastConfiguration instanceof CCCompilerConfiguration;
+            return  (CCCompilerConfiguration) lastConfiguration;
         }
-        return ccCompilerConfiguration;
+        return null;
     }
-    
+
     // Fortran Compiler
     public void setFortranCompilerConfiguration(FortranCompilerConfiguration fortranCompilerConfiguration) {
-        this.fortranCompilerConfiguration = fortranCompilerConfiguration;
+        this.lastConfiguration = fortranCompilerConfiguration;
     }
-    
+
     public synchronized FortranCompilerConfiguration getFortranCompilerConfiguration() {
-        if (fortranCompilerConfiguration == null) {
-            fortranCompilerConfiguration = new FortranCompilerConfiguration(((MakeConfiguration)configuration).getBaseDir(), ((MakeConfiguration)configuration).getFortranCompilerConfiguration());
+        if (getTool() == Tool.FortranCompiler) {
+            if (lastConfiguration == null) {
+                lastConfiguration = new FortranCompilerConfiguration(((MakeConfiguration) configuration).getBaseDir(), ((MakeConfiguration) configuration).getFortranCompilerConfiguration());
+            }
+            assert lastConfiguration instanceof FortranCompilerConfiguration;
+            return  (FortranCompilerConfiguration) lastConfiguration;
         }
-        return fortranCompilerConfiguration;
+        return null;
     }
-    
+
+    // Assembler
+    public void setAssemblerConfiguration(AssemblerConfiguration assemblerConfiguration) {
+        this.lastConfiguration = assemblerConfiguration;
+    }
+
+    public synchronized AssemblerConfiguration getAssemblerConfiguration() {
+        if (getTool() == Tool.Assembler) {
+            if (lastConfiguration == null) {
+                lastConfiguration = new AssemblerConfiguration(((MakeConfiguration) configuration).getBaseDir(), ((MakeConfiguration) configuration).getAssemblerConfiguration());
+            }
+            assert lastConfiguration instanceof AssemblerConfiguration;
+            return  (AssemblerConfiguration) lastConfiguration;
+        }
+        return null;
+    }
+
     // interface ConfigurationAuxObject
     public boolean shared() {
         return true;
     }
-    
+
     // interface ConfigurationAuxObject
     public boolean hasChanged() {
         return needSave;
     }
-    
+
     // interface ProfileAuxObject
     public void clearChanged() {
         needSave = false;
     }
-    
+
     /**
      * Returns an unique id (String) used to retrive this object from the
      * pool of aux objects
@@ -250,94 +314,136 @@ public class ItemConfiguration implements ConfigurationAuxObject {
 //    static public String getId(String path) {
 //        return "item-" + path; // NOI18N
 //    }
-    
     public String getId() {
         return item.getId();
     }
-    
+
     public void assign(ConfigurationAuxObject profileAuxObject) {
         if (!(profileAuxObject instanceof ItemConfiguration)) {
             // FIXUP: exception ????
             System.err.println("Item - assign: Profile object type expected - got " + profileAuxObject); // NOI18N
             return;
         }
-        ItemConfiguration i = (ItemConfiguration)profileAuxObject;
-        if (!getId().equals(i.getItem().getId())){
-            System.err.println("Item - assign: Item ID "+getId()+" expected - got " + i.getItem().getId()); // NOI18N
+        ItemConfiguration i = (ItemConfiguration) profileAuxObject;
+        if (!getId().equals(i.getItem().getId())) {
+            System.err.println("Item - assign: Item ID " + getId() + " expected - got " + i.getItem().getId()); // NOI18N
             return;
         }
         setConfiguration(i.getConfiguration());
         setItem(i.getItem());
         getExcluded().assign(i.getExcluded());
         setTool(i.getTool());
-        
-        getCustomToolConfiguration().assign(i.getCustomToolConfiguration());
-        getCCompilerConfiguration().assign(i.getCCompilerConfiguration());
-        getCCCompilerConfiguration().assign(i.getCCCompilerConfiguration());
-        getFortranCompilerConfiguration().assign(i.getFortranCompilerConfiguration());
+        switch (getTool()) {
+            case Tool.Assembler:
+                getAssemblerConfiguration().assign(i.getAssemblerConfiguration());
+                break;
+            case Tool.CCCompiler:
+                getCCCompilerConfiguration().assign(i.getCCCompilerConfiguration());
+                break;
+            case Tool.CCompiler:
+                getCCompilerConfiguration().assign(i.getCCompilerConfiguration());
+                break;
+            case Tool.CustomTool:
+                getCustomToolConfiguration().assign(i.getCustomToolConfiguration());
+                break;
+            case Tool.FortranCompiler:
+                getFortranCompilerConfiguration().assign(i.getFortranCompilerConfiguration());
+                break;
+            default:
+                assert false;
+        }
     }
-    
+
     public void assignValues(ConfigurationAuxObject profileAuxObject) {
         if (!(profileAuxObject instanceof ItemConfiguration)) {
             // FIXUP: exception ????
             System.err.println("Item - assign: Profile object type expected - got " + profileAuxObject); // NOI18N
             return;
         }
-        ItemConfiguration i = (ItemConfiguration)profileAuxObject;
+        ItemConfiguration i = (ItemConfiguration) profileAuxObject;
         getExcluded().assign(i.getExcluded());
         setTool(i.getTool());
-        
-        getCustomToolConfiguration().assign(i.getCustomToolConfiguration());
-        getCCompilerConfiguration().assign(i.getCCompilerConfiguration());
-        getCCCompilerConfiguration().assign(i.getCCCompilerConfiguration());
-        getFortranCompilerConfiguration().assign(i.getFortranCompilerConfiguration());
+        switch (getTool()) {
+            case Tool.Assembler:
+                getAssemblerConfiguration().assign(i.getAssemblerConfiguration());
+                break;
+            case Tool.CCCompiler:
+                getCCCompilerConfiguration().assign(i.getCCCompilerConfiguration());
+                break;
+            case Tool.CCompiler:
+                getCCompilerConfiguration().assign(i.getCCompilerConfiguration());
+                break;
+            case Tool.CustomTool:
+                getCustomToolConfiguration().assign(i.getCustomToolConfiguration());
+                break;
+            case Tool.FortranCompiler:
+                getFortranCompilerConfiguration().assign(i.getFortranCompilerConfiguration());
+                break;
+            default:
+                assert false;
+        }
     }
-    
+
     public ItemConfiguration copy(MakeConfiguration makeConfiguration) {
         ItemConfiguration copy = new ItemConfiguration(makeConfiguration, getItem());
         // safe using
         copy.assign(this);
+        copy.setConfiguration(makeConfiguration);
         return copy;
     }
-    
+
     @Override
     public Object clone() {
         ItemConfiguration i = new ItemConfiguration(getConfiguration(), getItem());
-        
-        i.setExcluded((BooleanConfiguration)getExcluded().clone());
-        i.setTool(getTool());
 
-        i.setCustomToolConfiguration((CustomToolConfiguration)getCustomToolConfiguration().clone());
-        i.setCCompilerConfiguration((CCompilerConfiguration)getCCompilerConfiguration().clone());
-        i.setCCCompilerConfiguration((CCCompilerConfiguration)getCCCompilerConfiguration().clone());
-        i.setFortranCompilerConfiguration((FortranCompilerConfiguration)getFortranCompilerConfiguration().clone());
+        i.setExcluded(getExcluded().clone());
+        i.setTool(getTool());
+        switch (getTool()) {
+            case Tool.Assembler:
+                i.setAssemblerConfiguration(getAssemblerConfiguration().clone());
+                break;
+            case Tool.CCCompiler:
+                i.setCCCompilerConfiguration(getCCCompilerConfiguration().clone());
+                break;
+            case Tool.CCompiler:
+                i.setCCompilerConfiguration(getCCompilerConfiguration().clone());
+                break;
+            case Tool.CustomTool:
+                i.setCustomToolConfiguration(getCustomToolConfiguration().clone());
+                break;
+            case Tool.FortranCompiler:
+                i.setFortranCompilerConfiguration(getFortranCompilerConfiguration().clone());
+                break;
+            default:
+                assert false;
+        }
         return i;
     }
-    
+
     //
     // XML codec support
     public XMLDecoder getXMLDecoder() {
         return new ItemXMLCodec(this);
     }
-    
+
     public XMLEncoder getXMLEncoder() {
         return new ItemXMLCodec(this);
     }
-    
+
     public void initialize() {
         // FIXUP: this doesn't make sense...
     }
-    
+
     public Sheet getGeneralSheet() {
         Sheet sheet = new Sheet();
-        
+
         Sheet.Set set = new Sheet.Set();
         set.setName("Item"); // NOI18N
         set.setDisplayName(getString("ItemTxt"));
         set.setShortDescription(getString("ItemHint"));
         set.put(new StringRONodeProp(getString("NameTxt"), IpeUtils.getBaseName(item.getPath())));
         set.put(new StringRONodeProp(getString("FilePathTxt"), item.getPath()));
-        String fullPath = IpeUtils.toAbsolutePath(((MakeConfiguration)configuration).getBaseDir(), item.getPath());
+        String fullPath = IpeUtils.toAbsolutePath(((MakeConfiguration) configuration).getBaseDir(), item.getPath());
         String mdate = ""; // NOI18N
         File itemFile = new File(fullPath);
         if (itemFile.exists()) {
@@ -347,103 +453,108 @@ public class ItemConfiguration implements ConfigurationAuxObject {
         set.put(new StringRONodeProp(getString("FullFilePathTxt"), fullPath));
         set.put(new StringRONodeProp(getString("LastModifiedTxt"), mdate));
         sheet.put(set);
-        
+
         set = new Sheet.Set();
         set.setName("ItemConfiguration"); // NOI18N
         set.setDisplayName(getString("ItemConfigurationTxt"));
         set.setShortDescription(getString("ItemConfigurationHint"));
         if ((getConfiguration() instanceof MakeConfiguration) &&
-            ((MakeConfiguration)getConfiguration()).isMakefileConfiguration()){
+                ((MakeConfiguration) getConfiguration()).isMakefileConfiguration()) {
             set.put(new BooleanNodeProp(getExcluded(), true, "ExcludedFromBuild", getString("ExcludedFromCodeAssistanceTxt"), getString("ExcludedFromCodeAssistanceHint"))); // NOI18N
         } else {
             set.put(new BooleanNodeProp(getExcluded(), true, "ExcludedFromBuild", getString("ExcludedFromBuildTxt"), getString("ExcludedFromBuildHint"))); // NOI18N
         }
         set.put(new ToolNodeProp());
         sheet.put(set);
-        
+
         return sheet;
     }
-    
-    private class ToolNodeProp extends Node.Property {
+
+    private class ToolNodeProp extends Node.Property<Integer> {
+
         public ToolNodeProp() {
             super(Integer.class);
         }
-        
+
         @Override
         public String getName() {
             return getString("ToolTxt1");
         }
-        
-        public Object getValue() {
-            return new Integer(getTool());
+
+        public Integer getValue() {
+            return Integer.valueOf(getTool());
         }
-        
-        public void setValue(Object v) {
-            String newTool = (String)v;
-            setTool(newTool);
+
+        public void setValue(Integer v) {
+//            String newTool = (String) v;
+//            setTool(newTool);
+            setTool(v);
         }
-        
+
         public boolean canWrite() {
             return true;
         }
-        
+
         public boolean canRead() {
             return true;
         }
-        
+
         @Override
         public PropertyEditor getPropertyEditor() {
             return new ToolEditor();
         }
     }
-    
+
     private class ToolEditor extends PropertyEditorSupport {
-        
+
         @Override
         public String getJavaInitializationString() {
             return getAsText();
         }
-        
+
         @Override
         public String getAsText() {
-            int val = ((Integer)getValue()).intValue();
-            CompilerSet set = CompilerSetManager.getDefault().getCompilerSet(((MakeConfiguration)configuration).getCompilerSet().getValue());
-            return set.getTool(val).getGenericName();
+            int val = ((Integer) getValue()).intValue();
+            return Tool.getName(val);
+//            CompilerSet set = CompilerSetManager.getDefault(((MakeConfiguration)configuration).getDevelopmentHost().getName()).getCompilerSet(((MakeConfiguration)configuration).getCompilerSet().getValue());
+//            return set.getTool(val).getGenericName();
         }
-        
+
         @Override
         public void setAsText(String text) throws java.lang.IllegalArgumentException {
-            setValue(text);
+//            setValue(text);
+            setValue(Tool.getTool(text));
         }
-        
+
         @Override
         public String[] getTags() {
             return getToolNames();
         }
     }
-    
-    private class StringRONodeProp extends PropertySupport {
+
+    private static class StringRONodeProp extends PropertySupport<String> {
+
         String value;
+
         public StringRONodeProp(String name, String value) {
             super(name, String.class, name, name, true, false);
             this.value = value;
         }
-        
-        public Object getValue() {
+
+        public String getValue() {
             return value;
         }
-        
-        public void setValue(Object v) {
+
+        public void setValue(String v) {
         }
     }
-    
-    
+
     @Override
     public String toString() {
         return getItem().getPath();
     }
-    
     private static ResourceBundle bundle = null;
+
     private static String getString(String s) {
         if (bundle == null) {
             bundle = NbBundle.getBundle(ItemConfiguration.class);
